# library

./: .gitignore  CMakeLists.txt  README.md  main.cpp
add_author_widget/: add_author_widget.cpp  add_author_widget.h  add_author_widget.ui
add_book_widget/: add_book_widget.cpp  add_book_widget.h
add_comic_book_widget/: add_comic_book_widget.cpp  add_comic_book_widget.h  add_comic_book_widget.ui
add_std_book_widget/: add_std_book_widget.cpp  add_std_book_widget.h  add_std_book_widget.ui
add_widget/: add_widget.cpp  add_widget.h
author/: author.cpp  author.h
book/: book.h
buttonswidget/: buttonswidget.cpp  buttonswidget.h  buttonswidget.ui
datamodel/: datamodel.cpp  datamodel.h
formwidget/: formwidget.cpp  formwidget.h  formwidget.ui
include/author/: author.h
include/author/comic_book_writer/: comic_book_writer.h
include/author/comic_book_writer/comic_book_writer_illustrator/: comic_book_writer_illustrator.h
include/author/comic_book_writer_illustrator/: comic_book_writer_illustrator.h
include/author/illustrator/: illustrator.h
include/author/writer/: writer.h
include/book/: book.h
include/book/comic_book/: comic_book.h
include/book/standard_book/: standard_book.h
include/data_model/: data_model.h
include/main_window/: main_window.h
include/main_window/add_widget/: add_widget.h
include/main_window/add_widget/add_author_widget/: add_author_widget.h
include/main_window/add_widget/add_book_widget/: add_book_widget.h
include/main_window/data_model/: data_model.h
include/main_window/search_widget/: search_widget.h
mainwindow/: mainwindow.cpp  mainwindow.h
messagewidget/: messagewidget.cpp  messagewidget.h  messagewidget.ui
searchwidget/: searchwidget.cpp  searchwidget.h  searchwidget.ui
src/: CMakeLists.txt  main.cpp
src/author/: CMakeLists.txt  author.cpp
src/author/comic_book_writer/: CMakeLists.txt  comic_book_writer.cpp
src/author/comic_book_writer/comic_book_writer_illustrator/: comic_book_writer_illustrator.cpp
src/author/comic_book_writer_illustrator/: CMakeLists.txt  comic_book_writer_illustrator.cpp
src/author/illustrator/: CMakeLists.txt  illustrator.cpp
src/author/writer/: CMakeLists.txt  writer.cpp
src/book/: CMakeLists.txt  book.cpp
src/book/comic_book/: CMakeLists.txt  comic_book.cpp
src/book/standard_book/: CMakeLists.txt  standard_book.cpp
src/main_window/: CMakeLists.txt  main_window.cpp  main_window.ui
src/main_window/add_widget/: CMakeLists.txt  add_widget.cpp  add_widget.ui
src/main_window/add_widget/add_author_widget/: CMakeLists.txt  add_author_widget.cpp
src/main_window/add_widget/add_book_widget/: CMakeLists.txt  add_book_widget.cpp
src/main_window/data_model/: CMakeLists.txt  data_model.cpp
src/main_window/search_widget/: CMakeLists.txt  search_widget.cpp
tablewidget/: tablewidget.cpp  tablewidget.h  tablewidget.ui
test/: CMakeLists.txt  add_authors_test.cpp
ui/main_window/add_widget/add_book_widget/: add_book_widget.ui
